# DjangoSkipPass

./: .env.example  manage.py  pyproject.toml
DjangoSkipPass/: asgi.py  settings.py  urls.py  wsgi.py
quotes/: connect.py  forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py
quotes/static/quotes/: style.css
quotes/templates/quotes/: add_author.html  add_quote.html  base.html  index.html
quotes/templatetags/: extract.py
users/: forms.py  models.py  views.py
users/migrations/: 0001_initial.py
users/templates/users/: login.html  signup.html
